--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- UC1 Header with logo-->
     <header class="header-content header">
         <div class="logo-content">
-            <img src="./Assets/logo.png" alt="logo" />
+            <img src="../Assets\logo.png" alt="logo" />
             <div>
                 <span class="emp-text">EMPLOYEE</span><br />
                 <span class="emp-text emp-payroll">PAYROLL</span>
@@ -33,30 +33,59 @@
                 <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
                 <error-output class="text-error" for="text"></error-output>
             </div>
-        </form>
-    </div>
             <!-- UC3 Specify profile pic in the form -->
             <div class="row-content">
                 <label class="label text" for="profile">Profile image</label>
                 <div class="profile-radio-content">
                     <label>
                         <input type="radio" id="profile1" name="profile" required />
-                        <img class="profile" id="image1" src="/Assets/Ellipse -1.png" />
+                        <img class="profile" id="image1" src="../Assets\Ellipse -1.png" />
                     </label>
                     <label>
                         <input type="radio" id="profile2" name="profile" required />
-                        <img class="profile" id="image2" src="./Assets/Ellipse -2.png" />
+                        <img class="profile" id="image2" src="../Assets\Ellipse -2.png" />
                     </label>
                     <label>
                         <input type="radio" id="profile3" name="profile" required />
-                        <img class="profile" id="image3" src="./Assets/Ellipse -3.png" />
+                        <img class="profile" id="image3" src="../Assets\Ellipse -3.png" />
                     </label>
                     <label>
                         <input type="radio" id="profile4" name="profile" required />
-                        <img class="profile" id="image4" src="./Assets/Ellipse -4.png" />
+                        <img class="profile" id="image4" src="../Assets\Ellipse -4.png" />
                     </label>
                 </div>
             </div>
+            <!-- UC4 Specify gender as radio button, department as checkbox, salary as range indicator-->
+            <div class="row-content">
+                <label class="label text" for="gender">Gender</label>
+                <div>
+                    <input type="radio" id="male" name="gender" value="male">
+                    <label class="text" for="male">Male</label>
+                    <input type="radio" id="female" name="gender" value="female">
+                    <label class="text" for="female">Female</label>
+                </div>
+            </div>
+            <div class="row-content">
+                <label class="label text" for="department">Department</label>
+                <div>
+                    <input type="checkbox" id="hr" name="department" value="HR">
+                    <label class="text" for="hr">HR</label>
+                    <input type="checkbox" id="sales" name="department" value="Sales">
+                    <label class="text" for="sales">Sales</label>
+                    <input type="checkbox" id="finance" name="department" value="Finance">
+                    <label class="text" for="finance">Finance</label>
+                    <input type="checkbox" id="engineer" name="department" value="Engineer">
+                    <label class="text" for="engineer">Engineer</label>
+                    <input type="checkbox" id="others" name="department" value="Others">
+                    <label class="text" for="others">Others</label>
+                </div>
+            </div>
+            <div>
+                <label for="salary">Salary</label>
+                <input type="range" name="salary" id="salary" min="300000" max="500000" step="100" value="400000">
+                <output class="salary-output" for="salary">400000</output>
+            </div>
+        </form>
 </body>
 
 </html>
