--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet" />
     <title>Employee Payroll App</title>
-    <script defer src="payroll_form.js"></script>
+    <script defer src="payroll.js"></script>
 </head>
 
 <body>
